--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -7,6 +7,7 @@
             <th>Name</th>
             <th>Description</th>
             <th>Price</th>
+            <th>Cart</th>
         </tr>
         </thead>
         <tbody>
@@ -16,6 +17,14 @@
                 <td>{{ product.name }}</td>
                 <td>{{ product.description }}</td>
                 <td>{{ product.price }}</td>
+                <td>
+                    <form method="post" action="{% url 'add_to_cart' product.id %}">
+                        {% csrf_token %}
+                        Quantity
+                        <input name='quantity' type="number" min="1" max="999">
+                        <button type="submit">Add</button>
+                    </form>
+                </td>
             </tr>
         {% endfor %}
         </tbody>
