--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -18,3 +18,16 @@ footer {
 .accountform {
     padding-top: 20px;
 }
+
+.badge {
+  padding-left: 9px;
+  padding-right: 9px;
+  -webkit-border-radius: 9px;
+  -moz-border-radius: 9px;
+  border-radius: 9px;
+}
+
+.label-warning[href],
+.badge-warning[href] {
+  background-color: #c67605;
+}
