--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>AuthenticateMe</title>
+    <title>ECommerce</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/cerulean/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
@@ -56,6 +56,11 @@
         </div>
     {% endif %}
     <div class="container">
+        <form action="{% url 'search' %}" method="get">
+            <input type="text" name="q">
+            <button type="submit">Search</button>
+        </form>
+
         {% block content %} {% endblock %}
     </div>
     <footer>
