--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -2,6 +2,17 @@
 {% load static from staticfiles %}
 {% load bootstrap_tags %}
 
+{% block head_js %}
+  <script src="https://js.stripe.com/v2/" type="text/javascript"></script>
+  <script type="text/javascript">
+      //<![CDATA[
+      Stripe.publishableKey = '{{ publishable }}';
+      //]]>
+  </script>
+  <script type="text/javascript" src="{% static 'js/stripe.js' %}"></script>
+{% endblock %}
+
+
 {% block content %}
     <table class="table">
         <thead>
@@ -11,7 +22,6 @@
             <th>Description</th>
             <th>Quantity</th>
             <th>Price</th>
-            <th>Action</th>
         </tr>
         </thead>
         <tbody>
@@ -22,14 +32,6 @@
                 <td>{{ item.product.description }}</td>
                 <td>{{ item.quantity }}</td>
                 <td>{{ item.product.price }}</td>
-                <td>
-                    <form method="post" action="{% url 'adjust_cart' item.id %}">
-                        {% csrf_token %}
-                        Quantity
-                        <input name='quantity' type="number" min="0" max="999">
-                        <button type="submit">Adjust</button>
-                    </form>
-                </td>
             </tr>
         {% endfor %}
         <tr>
@@ -42,5 +44,29 @@
         </tr>
         </tbody>
     </table>
+    
+
+    <form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
+        
+    <legend>Payment Details</legend>
+
+    <div id="credit-card-errors" style="display:none">
+      <div class="alert-message block-message error" id="stripe-error-message"></div>
+    </div>
+
+    <div class="form-group col-md-6">
+        {{ address_form|as_bootstrap }}
+    </div>
+
+    <div class="form-group col-md-6">
+        {{ payment_form|as_bootstrap }}
+    </div>
+
+    {% csrf_token %}
+    <div class="form-group col-md-12">
+      <input class="btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
+    </div>
+
+    </form>
 
 {% endblock %}
