--- a/templates/base.html
+++ b/templates/base.html
@@ -48,16 +48,7 @@
             </div>
         </div>
     </nav>
-    {% if messages %}
-        <div class="alert alert-success">
-            <div class="messages">
-                {% for message in messages %}
-                    {{ message }}
-                {% endfor %}
-            </div>
-        </div>
-    {% endif %}
-    <div class="container">
+`c    <div class="container">
         <form action="{% url 'search' %}" method="get">
             <input type="text" name="q">
             <button type="submit">Search</button>
