Save order details to Database

--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -55,7 +55,7 @@
     </div>
 
     <div class="form-group col-md-6">
-        {{ address_form|as_bootstrap }}
+        {{ order_form|as_bootstrap }}
     </div>
 
     <div class="form-group col-md-6">
