--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -3,44 +3,44 @@
 {% load bootstrap_tags %}
 
 {% block content %}
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Image</th>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Quantity</th>
-            <th>Price</th>
-            <th>Action</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for item in cart_items %}
-            <tr>
-                <td><img height="100" width="100" src="{{ MEDIA_URL }}{{ item.product.image }}"></td>
-                <td>{{ item.product.name }}</td>
-                <td>{{ item.product.description }}</td>
-                <td>{{ item.quantity }}</td>
-                <td>{{ item.product.price }}</td>
-                <td>
-                    <form method="post" action="{% url 'adjust_cart' item.id %}">
+<div class="row">
+    {% for item in cart_items %}
+    
+    <div class="col-md-3 col-sm-6 display panel panel-default">
+        
+        <div class="panel-body" >
+            <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
+            <!-- <img class="product" height="150" width="150" src="{{ MEDIA_URL }}{{ product.image }}" alt="image of the product"> -->
+            <div class="caption">
+                <h3>{{ item.product.name }}</h3>
+                <p>{{ item.product.description }}</p>
+                <p>{{ item.product.price }}</p>
+                <p>
+                    
+                    
+                    
+                    <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
                         {% csrf_token %}
-                        Quantity
-                        <input name='quantity' type="number" min="0" max="999">
-                        <button type="submit">Adjust</button>
+                        <div class="form-group">
+                            <label class="sr-only" for="exampleInputAmount">New Qty</label>
+                            <div class="input-group">
+                                <div class="input-group-addon">Qty</div>
+                                <input name='quantity' type="number"  min="1" max="999" class="form-control" >
+                                <div class="input-group-addon">{{item.quantity}}</div>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Amend</button>
                     </form>
-                </td>
-            </tr>
-        {% endfor %}
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>Total</td>
-            <td>{{ total }}</td>
-            <td><a href="{% url 'checkout' %}" class="btn btn-success" role="button">Checkout</a></td>
-        </tr>
-        </tbody>
-    </table>
+                </p>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
+<div class="row">
+    <p>Total</p>
+    <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span> {{ total }}</p>
+    <a href="{% url 'checkout' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span> Checkout</a>
+</div>
 
 {% endblock %}
