--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -1,32 +1,31 @@
 {% extends "base.html" %}
 {% block content %}
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Image</th>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Price</th>
-            <th>Cart</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for product in products %}
-            <tr>
-                <td><img height="100" width="100" src="{{ MEDIA_URL }}{{ product.image }}"></td>
-                <td>{{ product.name }}</td>
-                <td>{{ product.description }}</td>
-                <td>{{ product.price }}</td>
-                <td>
-                    <form method="post" action="{% url 'add_to_cart' product.id %}">
-                        {% csrf_token %}
-                        Quantity
-                        <input name='quantity' type="number" min="1" max="999">
-                        <button type="submit">Add</button>
-                    </form>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+
+{% for product in products %}
+
+<div class="col-md-3 col-sm-6 display panel panel-default">
+    
+    <div class="panel-body" >
+        <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
+        
+        <div class="caption">
+            <h3>{{ product.name }}</h3>
+            <p>{{ product.description }}</p>
+            <p>{{ product.price }}</p>
+            <p>
+                
+                
+                <form method="post" action="{% url 'add_to_cart' product.id %}">
+                    {% csrf_token %}
+                    Quantity
+                    <input name='quantity' type="number" min="1" max="999">
+                    <button class="btn btn-success" type="submit">Add</button>
+                </form>
+            </p>
+        </div>
+    </div>
+</div>
+{% endfor %}
+</tbody>
+</table>
 {% endblock %}
