--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -31,3 +31,18 @@ footer {
 .badge-warning[href] {
   background-color: #c67605;
 }
+
+.display {
+    margin: 30px;
+    width: 200px;
+}
+
+.product {
+    margin: 20px;
+    background-size:contain;
+    background-position:center center;
+    background-repeat:no-repeat;
+    width: 150px;
+    height: 150px;
+    margin: 0 auto;
+}
