--- a/templates/base.html
+++ b/templates/base.html
@@ -48,12 +48,13 @@
             </div>
         </div>
     </nav>
-`c    <div class="container">
+    <div class="container">
+        <div class="display">
         <form action="{% url 'search' %}" method="get">
             <input type="text" name="q">
             <button type="submit">Search</button>
         </form>
-
+    </div>
         {% block content %} {% endblock %}
     </div>
     <footer>
