--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
             </div>
         </div>
     </nav>
-`c    <div class="container">
+    <div class="container">
         <form action="{% url 'search' %}" method="get">
             <input type="text" name="q">
             <button type="submit">Search</button>
