--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -4,41 +4,41 @@
 
 {% block content %}
 <div class="row row-flex">
-    {% for item in cart_items %}
-    
+    {% for item_pk, item in cart_items.items %}
+
     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
-        
+
         <div class="panel-body" >
             <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
-         
+
             <div class="caption">
                 <h3>{{ item.product.name }}</h3>
                 <p class="product-description">{{ item.product.description }}</p>
-                <p>{{ item.product.price }}</p>
-                <p>
-
-                    <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <label class="sr-only" for="exampleInputAmount">New Qty</label>
-                            <div class="input-group">
-                                <div class="input-group-addon">Qty</div>
-                                <input name='quantity' type="number"  min="0" max="999" class="form-control" >
-                                <div class="input-group-addon">{{item.quantity}}</div>
-                            </div>
+                <p>Price:  &euro;{{ item.product.price }}</p>
+                <form class="form-inline" method="post" action="{% url 'adjust_cart' item_pk %}">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label class="sr-only" for="quantity">New Qty</label>
+                        <div class="input-group">
+                            <div class="input-group-addon">Qty</div>
+                            <input name="quantity" id="quantity" type="number" min="0" max="999" class="form-control" value="{{item.quantity}}">
                         </div>
-                        <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Amend</button>
-                    </form>
-                </p>
+                    </div>
+                    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Amend</button>
+                </form>
             </div>
         </div>
     </div>
     {% endfor %}
 </div>
 <div class="row">
+{% if total %}
     <p>Total</p>
-    <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span> {{ total }}</p>
+    <p> &euro;{{ total }}</p>
     <a href="{% url 'checkout' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span> Checkout</a>
+{% else %}
+    <p>Your cart is empty</p>
+{% endif %}
 </div>
 
 {% endblock %}
