--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -16,22 +16,22 @@
 {% block content %}
     <table class="table">
         <thead>
-        <tr>
-            <th>Image</th>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Quantity</th>
-            <th>Price</th>
-        </tr>
+            <tr>
+                <th>Image</th>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Quantity</th>
+                <th>Price</th>
+            </tr>
         </thead>
         <tbody>
-        {% for item in cart_items %}
+        {% for item_pk, item in cart_items.items %}
             <tr>
                 <td><img height="100" width="100" src="{{ MEDIA_URL }}{{ item.product.image }}"></td>
                 <td>{{ item.product.name }}</td>
                 <td>{{ item.product.description }}</td>
                 <td>{{ item.quantity }}</td>
-                <td>{{ item.product.price }}</td>
+                <td> &euro;{{ item.product.price }}</td>
             </tr>
         {% endfor %}
         <tr>
@@ -44,29 +44,26 @@
         </tr>
         </tbody>
     </table>
-    
 
     <form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
-        
-    <legend>Payment Details</legend>
+        <legend>Payment Details</legend>
 
-    <div id="credit-card-errors" style="display:none">
-      <div class="alert-message block-message error" id="stripe-error-message"></div>
-    </div>
+        <div id="credit-card-errors" style="display:none">
+          <div class="alert-message block-message error" id="stripe-error-message"></div>
+        </div>
 
-    <div class="form-group col-md-6">
-        {{ order_form|as_bootstrap }}
-    </div>
+        <div class="form-group col-md-6">
+            {{ order_form|as_bootstrap }}
+        </div>
 
-    <div class="form-group col-md-6">
-        {{ payment_form|as_bootstrap }}
-    </div>
+        <div class="form-group col-md-6">
+            {{ payment_form|as_bootstrap }}
+        </div>
 
-    {% csrf_token %}
-    <div class="form-group col-md-12">
-      <input class="btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
-    </div>
-
+        {% csrf_token %}
+        <div class="form-group col-md-12">
+          <input class="btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
+        </div>
     </form>
 
 {% endblock %}
