--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -1,33 +1,37 @@
 {% extends "base.html" %}
-{% block content %}
+{% load product_extras %}
 
-<div class="row row-flex">
-{% for product in products %}
-    
-    <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
-        
-        <div class="panel-body" >
-            <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
-            
-           
+{% block content %}
+    <div class="row row-flex">
+    {% for product in products %}
+        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
+            <div class="panel-body" >
+                <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
                 <h3>{{ product.name }}</h3>
                 <p class="product-description">{{ product.description }}</p>
-                <p>{{ product.price }}</p>
-                
-                    
-                    <form method="post" action="{% url 'add_to_cart' product.id %}">
-                        {% csrf_token %}
-                        <div class="input-group">
-                          <input name='quantity' type="number" min="1" max="999" class="form-control" placeholder="Quantity">
-                          <span class="input-group-btn">
+                <p>Price: &euro;{{ product.price }}</p>
+                <p class="product-description">Currently in cart: {{ product.pk|quantity_in_cart:cart_items }}</p>
+                <form method="post" action="{% url 'add_to_cart' product.id %}">
+                    {% csrf_token %}
+                    <div class="input-group">
+                        <label class="sr-only" for="quantity">New Qty</label>
+                        <div class="input-group-addon">Qty</div>
+                        <input name="quantity" id="quantity" type="number" min="1" max="999" class="form-control" value="1">
+                        <span class="input-group-btn">
                             <button class="btn btn-success" type="submit">Add</button>
-                          </span>
-                        </div><!-- /input-group -->
-                        
-                    </form>
-                
+                        </span>
+                    </div>
+                </form>
+            </div>
         </div>
+    {% empty %}
+        <p>Sorry, no matching products were found</p>
+    {% endfor %}
     </div>
-{% endfor %}
-</div>
+
+    {% if query %}
+        <div class="row row-flex">
+            <a href="{% url 'search' %}">Back to all results</a>
+        </div>
+    {% endif %}
 {% endblock %}
