--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,10 @@
                 <a class="navbar-brand" href="/">ECommerce</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
+                <form class="navbar-form navbar-left" role="search" action="{% url 'search' %}" method="get">
+                    <input type="text" name="q" class="form-control" placeholder="product name">
+                    <button type="submit" class="btn btn-default">Search</button>
+                </form>
                 <ul class="nav navbar-nav navbar-right">
                     {% if user.is_authenticated %}
                         <li><a href="{% url 'profile' %}"><i class="fa fa-user"></i> Profile</a></li>
@@ -38,7 +42,7 @@
                     {% endif %}
                     <li>
                         <a href="{% url 'view_cart' %}">
-                            <i class="fa fa-shopping-cart"></i> Cart 
+                            <i class="fa fa-shopping-cart"></i> Cart
                             {% if product_count > 0 %}
                             <label class="badge badge-warning">{{ product_count }}</label>
                             {% endif %}
@@ -48,17 +52,9 @@
             </div>
         </div>
     </nav>
-<div class="container">
-
-        <div class="display">
-
-        <form action="{% url 'search' %}" method="get">
-            <input type="text" name="q">
-            <button type="submit">Search</button>
-        </form>
-    </div>
+    <main class="container">
         {% block content %} {% endblock %}
-    </div>
+    </main>
     <footer>
         <div class="container">
             <p>Made by Code Institute bootcampers</p>
